# server/api_specs.json
@@ -157,9 +157,46 @@
         }
       }
     },
+    "/api/users/me": {
+      "get": {
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Jwt Bearer token",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "style": "simple"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": ""
+          },
+          "401": {
+            "description": ""
+          },
+          "404": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/users/set_username": {
       "patch": {
-        "description": "complete user registration",
+        "description": "Set username",
         "parameters": [
           {
             "in": "header",
@@ -193,6 +230,39 @@
           },
           "404": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/api/messages/": {
+      "get": {
+        "parameters": [
+          {
+            "in": "query",
+            "name": "limit",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
+            },
+            "style": "form"
+          },
+          {
+            "in": "query",
+            "name": "offset",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "uint64",
+              "minimum": 0.0
+            },
+            "style": "form"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "no content"
           }
         }
       }
@@ -347,6 +417,22 @@
           }
         }
       },
+      "Role": {
+        "type": "object",
+        "required": [
+          "description",
+          "id"
+        ],
+        "properties": {
+          "description": {
+            "type": "string"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
       "SelectEvent": {
         "type": "object",
         "required": [
@@ -356,6 +442,33 @@
           "id": {
             "type": "integer",
             "format": "int32"
+          }
+        }
+      },
+      "User": {
+        "type": "object",
+        "required": [
+          "id",
+          "log_to_id",
+          "roles",
+          "username"
+        ],
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "log_to_id": {
+            "type": "string"
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Role"
+            }
+          },
+          "username": {
+            "type": "string"
           }
         }
       }
